:beers: java 9 compatible